homework/5.kubernetes-network/redmine/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine-app
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        # volumeMounts:
        # - name: data
        #   mountPath: /var/lib/postgresql/data
      volumes:
      - name: psql-secret
        secret:
          secretName: psql-secret
      - name: redmine-secret
        secret:
          secretName: redmine-secret
      # - name: data
      #   persistentVolumeClaim:
      #     claimName: pvc-psqldb
      - name: redmine-config
        configMap:
          name: redmine-configmap
      - name: psqldb-config
        configMap:
          name: psqldb-configmap
