homework/5.kubernetes-network/redmine/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine-app
  type: LoadBalancer
