homework/5.kubernetes-network/redmine/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: redmine-svc
          servicePort: 80
